feat: add new endpoint to retrieve paginated thumbnail images
